#76 - Fix elements in video carousel overlapping Youtube's control buttons

--- a/src/hanusovedni/static/sass/_festival.scss
+++ b/src/hanusovedni/static/sass/_festival.scss
@@ -178,8 +178,7 @@
       .carousel-control-prev, .carousel-control-next {
         visibility: hidden;
         height: 30px;
-        top: 50%;
-        bottom: 50%;
+        top: 40%;
       }
 
       &:hover {
